force-app/main/default/objects/Renewal_Notice__e/Renewal_Notice__e.object-meta.xml
<CustomObject>
    <description>Multi-purpose UI notification event for Renewal automations (success/error/info). Published by Renewal flows and consumed by the renewalNotice LWC via empApi.</description>
    <label>Renewal Notice</label>
    <pluralLabel>Renewal Notices</pluralLabel>
</CustomObject>