force-app/main/default/objects/Renewal_Notice__e/fields/Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Link_Id__c</fullName>
    <description>Optional record Id to link from the notice (e.g., the newly created Insurance).</description>
    <label>Link Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>