force-app/main/default/objects/Renewal_Notice__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Id of the Renewal (Opportunity) this notice belongs to; the LWC filters on it.</description>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>