force-app/main/default/objects/Renewal_Notice__e/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Short headline for the notice.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>