force-app/main/default/objects/Renewal_Notice__e/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <description>Notice style: success | error | warning | info.</description>
    <label>Variant</label>
    <length>20</length>
    <type>Text</type>
</CustomField>